--- a/back-end/.env.example
+++ b/back-end/.env.example
@@ -1,9 +1,10 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:vNjxJYPItahyoGRCjU9jWZj7SD7+0U/2LNQKEbEyaRc=
 APP_DEBUG=true
 APP_URL=http://localhost:8000
 APP_PORT=8000
+APP_VERSION=8
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
