--- a/front-end/Dockerfile
+++ b/front-end/Dockerfile
@@ -1,20 +1,22 @@
-# base image
-FROM node:19-alpine as build-stage
+FROM node:lts-alpine
 
-# set working directory
+# install simple http server for serving static content
+RUN npm install -g http-server
+
+# make the 'app' folder the current working directory
 WORKDIR /app
 
-# add `/app/node_modules/.bin` to $PATH
-ENV PATH /app/node_modules/.bin:$PATH
+# copy both 'package.json' and 'package-lock.json' (if available)
+COPY package*.json ./
 
-# install and cache app dependencies
-COPY package.json /app/package.json
-
+# install project dependencies
 RUN npm install
+
+# copy project files and folders to the current working directory (i.e. 'app' folder)
 COPY . .
+
+# build app for production with minification
 RUN npm run build
 
-FROM nginx:1.14.1-alpine as production-stage
-COPY --from=build-stage /app/dist /usr/share/nginx/html
-EXPOSE 80
-CMD [ "nginx", "-g", "daemon off;" ]
+EXPOSE 8080
+CMD [ "http-server", "dist" ]
