--- a/front-end/docker-compose.yml
+++ b/front-end/docker-compose.yml
@@ -1,15 +1,17 @@
 version: '3'
 
 services:
-  web:
-    image: ebiven/vue-cli
+  vuejs-app:
+    container_name: vuejs-app
+    build:
+      context: .
+      dockerfile: Dockerfile
     environment:
     - HOST=0.0.0.0
     volumes:
-      - ./app:/code
-    working_dir: /code
-    command: npm install
-    command: npm run serve
+      - ./:/app
+    working_dir: /app
+    # command: npm install
+    # command: npm run build
     ports:
       - "8080:8080"
-    restart: always
